WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136909
Occasional unreproducible crashes in MessageReceiverMap::dispatchMessage
https://bugs.webkit.org/show_bug.cgi?id=136909
Summary
Occasional unreproducible crashes in MessageReceiverMap::dispatchMessage
Tim Horton
Reported
2014-09-18 00:04:49 PDT
Occasional unreproducible crashes in MessageReceiverMap::dispatchMessage
Attachments
Patch
(1.67 KB, patch)
2014-09-18 00:05 PDT
,
Tim Horton
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-09-18 00:05:16 PDT
Created
attachment 238291
[details]
Patch
Tim Horton
Comment 2
2014-09-18 00:08:15 PDT
Step 2: Make a API test, if possible. Prerequisites include getting TestWebKitAPI a Modern API bundle and ... causing the issue to reproduce at all. Going to try this now, but I want to keep it separate from the fix for mergability's sake (most likely going to change bundle loading code). Step 3: Fix a few less obviously bad but still confusing cases of message receivers not being removed before the object is destroyed. Step 4: Add some assertions that catch this and the other cases; Anders and I wrote some nice assertions today that catch all of these things.
Darin Adler
Comment 3
2014-09-18 08:40:06 PDT
<
rdar://problem/17758325
>
Tim Horton
Comment 4
2014-09-18 09:26:49 PDT
http://trac.webkit.org/changeset/173722
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug